<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/register_linearlayout"
        android:layout_marginTop="10dp" >

        <TextView
            style="@style/register_textview"
            android:text="@string/reg_username" />

        <com.mo.mobileoffice.common.widget.DeletableEditText
            android:id="@+id/et_username"
            style="@style/register_edittext"
            android:inputType="text" />
    </LinearLayout>

    <include layout="@layout/include_divider" />

    <LinearLayout style="@style/register_linearlayout" >

        <TextView
            style="@style/register_textview"
            android:text="@string/reg_password" />

        <com.mo.mobileoffice.common.widget.DeletableEditText
            android:id="@+id/et_pwd"
            style="@style/register_edittext"
            android:inputType="textPassword" />
    </LinearLayout>

    <include layout="@layout/include_divider" />

    <LinearLayout style="@style/register_linearlayout" >

        <TextView
            style="@style/register_textview"
            android:text="@string/reg_password_again" />

        <com.mo.mobileoffice.common.widget.DeletableEditText
            android:id="@+id/et_pwd_again"
            style="@style/register_edittext"
            android:inputType="textPassword" />
    </LinearLayout>

    <include layout="@layout/include_divider" />

    <LinearLayout style="@style/register_linearlayout" >

        <TextView
            style="@style/register_textview"
            android:text="@string/reg_email" />

        <com.mo.mobileoffice.common.widget.DeletableEditText
            android:id="@+id/et_email"
            style="@style/register_edittext"
            android:inputType="textEmailAddress" />
    </LinearLayout>

</LinearLayout>