<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/reimburse_details"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="3dp"
            android:text="@string/delete"
            android:textColor="#56aaff"
            android:textSize="14sp"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp" >

        <TextView
            android:id="@+id/re_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/reimburse_amount"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/cost_reimburse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/re_cost"
            android:background="@color/white"
            android:hint="@string/please_input_number_amount_not_more_than_6_digits"
            android:inputType="number"
            android:maxLength="6"
            android:padding="3dp"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:padding="10dp" >

        <TextView
            android:id="@+id/re_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/reimburse_type"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/type_reimburse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/re_type"
            android:background="@color/white"
            android:hint="@string/procurement_funds_activity_funds"
            android:inputType="text"
            android:padding="3dp"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:padding="10dp" >

        <TextView
            android:id="@+id/re_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="3dp"
            android:text="@string/reimburse_details"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/detail_reimburse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/re_detail"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/please_input_cost_detail_description"
            android:lines="4"
            android:padding="3dp"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>