<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/projector"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/rg_projector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="-1"
                    android:text="@string/all" />

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="1"
                    android:text="@string/have" />

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="0"
                    android:text="@string/none" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/WIFI"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/rg_WIFI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="-1"
                    android:text="@string/all" />

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="1"
                    android:text="@string/have" />

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="0"
                    android:text="@string/none" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/air_conditioner"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/rg_air_conditioner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="-1"
                    android:text="@string/all" />

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="1"
                    android:text="@string/have" />

                <RadioButton
                    style="@style/meeting_checkbox"
                    android:tag="0"
                    android:text="@string/none" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_meeting_btn_bg"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>