<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/reimburse_details"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="3dp"
                    android:text="@string/delete"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/re_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/reimburse_amount"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/cost_re"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/re_cost"
                    android:background="@color/white"
                    android:hint="@string/please_input_number_amount_not_more_than_6_digits"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="3dp"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/re_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/reimburse_type"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/about_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/re_type"
                    android:background="@color/white"
                    android:hint="@string/procurement_funds_activity_funds"
                    android:padding="3dp"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/re_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="3dp"
                    android:text="@string/reimburse_details"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/detail_re"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/re_detail"
                    android:background="@color/white"
                    android:gravity="top"
                    android:hint="@string/please_input_cost_detail_description"
                    android:lines="4"
                    android:padding="3dp"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/addreDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_reimburse_details"
            android:textColor="#56aaff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/all_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingRight="3dp"
                android:text="@string/total_reimburse_amount"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/allcost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/zero"
                android:textSize="14sp" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/guanlian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="10dp"
                android:paddingRight="5dp"
                android:text="选择出差" />
            
            <TextView 
                android:id="@+id/tv_baoxiao"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/re_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/pictrue"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ico_photo" />
        </RelativeLayout>

        <GridLayout
            android:id="@+id/reimburse_gl_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="5dp" />
    </LinearLayout>

</ScrollView>